--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,7 +1,9 @@
 {
     "common": {
         "book": "livre",
-        "search": "Rechercher des livres"
+        "list": "liste",
+        "search": "Rechercher des livres",
+        "error": "Erreur"
     },
     "save": "Enregistrer",
     "create": "Créer",
@@ -80,7 +82,9 @@
         "lists": {
             "title": "Listes",
             "header": "Listes populaires",
-            "description": "Découvrez les listes créées par la communauté"
+            "description": "Découvrez les listes créées par la communauté",
+            "empty": "Aucune liste trouvée",
+            "emptyDescription": "Il n'y a pas encore de listes publiques à afficher."
         },
         "search": {
             "empty": "Commencez votre recherche en tapant ci-dessus.",
@@ -104,6 +108,13 @@
                 "date_desc": "Ajoutés récemment",
                 "date_asc": "Ajoutés anciennement"
             }
+        },
+        "allLists": {
+            "title": "Toutes les listes",
+            "searchPlaceholder": "Rechercher des listes",
+            "noLists": "Aucune liste disponible",
+            "noResults": "Aucune liste trouvée pour votre recherche",
+            "errorLoading": "Impossible de charger les listes"
         },
         "searchPlaceholder": "Rechercher dans la collection",
         "cancel": "Annuler",
