feat: enhance user profile and stats screens with displayName updates, improved navigation options, and dynamic data handling for better user experience

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -151,7 +151,7 @@
         }
     },
     "stats": {
-        "title": "Statistics",
+        "title": "{{name}}'s stats",
         "overview": {
             "title": "Overview",
             "followed": "In library",
@@ -195,7 +195,7 @@
         },
         "funnel": {
             "title": "Reading status",
-            "total": "{{count}} series followed total"
+            "total": "{{count}} series read total"
         },
         "authors": {
             "title": "Most read authors",
