feat: implement like and save functionality for lists, update related components and hooks for enhanced user interaction

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -268,6 +268,11 @@
         "reorder": "Reorder",
         "edit": "Edit",
         "delete": "Delete",
+        "like": "Like",
+        "unlike": "Unlike",
+        "save": "Save",
+        "unsave": "Unsave",
+        "likes": "{{count}} Likes",
         "reorderModal": {
             "title": "Reorder list",
             "book": "book",
@@ -333,6 +338,14 @@
         "listUpdated": "List updated",
         "errorUpdatingList": "Unable to update list",
         "errorSavingList": "Unable to save list",
+        "listLiked": "List liked",
+        "listUnliked": "Like removed",
+        "listSaved": "List saved to your collection",
+        "listUnsaved": "List removed from your collection",
+        "errorLikingList": "Unable to like list",
+        "errorUnlikingList": "Unable to unlike list",
+        "errorSavingListToCollection": "Unable to save list",
+        "errorUnsavingList": "Unable to unsave list",
         "changesNotSaved": "Changes not saved",
         "profileUpdated": "Profile updated",
         "errorUpdatingProfile": "Unable to update profile",
