--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -268,6 +268,11 @@
         "reorder": "Réordonner",
         "edit": "Modifier",
         "delete": "Supprimer",
+        "like": "J'aime",
+        "unlike": "Je n'aime plus",
+        "save": "Sauvegarder",
+        "unsave": "Retirer",
+        "likes": "{{count}} J'aime",
         "reorderModal": {
             "title": "Réordonner la liste",
             "book": "livre",
@@ -334,6 +339,14 @@
         "listUpdated": "Liste mise à jour",
         "errorUpdatingList": "Impossible de mettre à jour la liste",
         "errorSavingList": "Impossible de sauvegarder la liste",
+        "listLiked": "Liste likée",
+        "listUnliked": "Like retiré",
+        "listSaved": "Liste sauvegardée dans votre collection",
+        "listUnsaved": "Liste retirée de votre collection",
+        "errorLikingList": "Impossible de liker la liste",
+        "errorUnlikingList": "Impossible de retirer le like",
+        "errorSavingListToCollection": "Impossible de sauvegarder la liste",
+        "errorUnsavingList": "Impossible de retirer la liste",
         "changesNotSaved": "Modifications non sauvegardées",
         "profileUpdated": "Profil mis à jour",
         "errorUpdatingProfile": "Impossible de mettre à jour le profil",
