--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,10 +1,24 @@
 {
     "common": {
         "book": "book",
+        "books": "books",
+        "chapter": "chapter",
+        "chapters": "chapters",
+        "issue": "issue",
+        "issues": "issues",
         "list": "list",
         "lists": "lists",
         "search": "Search books",
-        "error": "Error"
+        "error": "Error",
+        "bookTypes": {
+            "comic": "Comic",
+            "novel": "Novel",
+            "light_novel": "Light Novel",
+            "manga": "Manga",
+            "manhua": "Manhua",
+            "manhwa": "Manhwa",
+            "other": "Other"
+        }
     },
     "save": "Save",
     "create": "Create",
@@ -77,6 +91,11 @@
         "title": "Discover",
         "searchPlaceholder": "Start your search",
         "cancel": "Cancel",
+        "filters": {
+            "books": "Books",
+            "lists": "Lists",
+            "users": "Users"
+        },
         "books": {
             "title": "Books"
         },
@@ -241,6 +260,7 @@
         "french": "French"
     },
     "book": {
+        "translatedByIA": "Translated by IA",
         "publicationStatus": {
             "completed": "completed",
             "ongoing": "ongoing",
