--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,10 +1,24 @@
 {
     "common": {
         "book": "livre",
+        "books": "livres",
+        "chapter": "chapitre",
+        "chapters": "chapitres",
+        "issue": "numéro",
+        "issues": "numéros",
         "list": "liste",
         "lists": "listes",
         "search": "Rechercher des livres",
-        "error": "Erreur"
+        "error": "Erreur",
+        "bookTypes": {
+            "comic": "Comic",
+            "novel": "Roman",
+            "light_novel": "Light Novel",
+            "manga": "Manga",
+            "manhua": "Manhua",
+            "manhwa": "Manhwa",
+            "other": "Autre"
+        }
     },
     "save": "Enregistrer",
     "create": "Créer",
@@ -77,6 +91,11 @@
         "title": "Découvrir",
         "searchPlaceholder": "Commencez votre recherche",
         "cancel": "Annuler",
+        "filters": {
+            "books": "Livres",
+            "lists": "Listes",
+            "users": "Utilisateurs"
+        },
         "books": {
             "title": "Livres"
         },
@@ -241,6 +260,7 @@
         "french": "Français"
     },
     "book": {
+        "translatedByIA": "Traduit par IA",
         "publicationStatus": {
             "completed": "complété",
             "ongoing": "en cours",
