feat: add tracking count display to BookScreen and update translations for improved localization

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -267,6 +267,7 @@
             "hiatus": "hiatus"
         },
         "rating": "rating",
+        "tracking": "tracking",
         "chapter": "Chapter",
         "issue": "Issue",
         "lastChapterRead": "Last chapter read",
