--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -267,6 +267,7 @@
             "hiatus": "en pause"
         },
         "rating": "note",
+        "tracking": "suivent",
         "chapter": "Chapitre",
         "issue": "Numéro",
         "lastChapterRead": "Dernier chapitre lu",
