--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -372,6 +372,7 @@
         "errorAddingToTracking": "Unable to add book to library",
         "addedToList": "Book added to list",
         "removedFromList": "Book removed from list",
+        "listsUpdated": "Lists updated",
         "incrementChapter": "Chapter {{number}} marked as read",
         "backdropReserved": "The backdrop image is reserved for the Plus plan",
         "listNameRequired": "The list name is required",
@@ -397,7 +398,10 @@
         "comingSoon": "Coming soon",
         "errorTrackingToggle": "Unable to remove or add book",
         "errorSavingLists": "Unable to save lists",
-        "errorLoadingLists": "Unable to load lists"
+        "errorLoadingLists": "Unable to load lists",
+        "listCreated": "List created successfully",
+        "errorCreatingList": "Unable to create list",
+        "errorDeletingList": "Unable to delete list"
     },
     "errors": {
         "AUTH_EMAIL_ALREADY_USED": "An account with this email already exists",
