feat: implement CreateListBottomSheet component for adding new lists, update Collection and HeaderCollection components to integrate new functionality, and adjust styles for improved UI consistency

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -377,6 +377,7 @@
         "backdropReserved": "The backdrop image is reserved for the Plus plan",
         "listNameRequired": "The list name is required",
         "listUpdated": "List updated",
+        "listDeleted": "List deleted",
         "errorUpdatingList": "Unable to update list",
         "errorSavingList": "Unable to save list",
         "listLiked": "List liked",
