feat: add confetti celebration feature upon book completion, integrate new ConfettiCelebration component, and update related logic in BookScreen and bottom sheets for enhanced user experience

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -402,7 +402,8 @@
         "errorLoadingLists": "Unable to load lists",
         "listCreated": "List created successfully",
         "errorCreatingList": "Unable to create list",
-        "errorDeletingList": "Unable to delete list"
+        "errorDeletingList": "Unable to delete list",
+        "bookCompleted": "Congratulations! You've finished this book!"
     },
     "errors": {
         "AUTH_EMAIL_ALREADY_USED": "An account with this email already exists",
