feat: refactor bottom sheet components to improve modularity and functionality, introducing separate sheets for book actions, status editing, rating, and list management, while enhancing context management for better state handling

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -351,6 +351,8 @@
         "changeCover": "Change cover",
         "share": "Share",
         "rate": "Rate",
+        "rateBook": "Rate this book",
+        "saveRating": "Save rating",
         "removeFromTracking": "Remove from library",
         "removeFromFavorites": "Remove from favorites",
         "removeFromList": "Remove from list",
