feat: enhance chat functionality by conditionally rendering the right button in BookScreen based on book tracking status, update API endpoint in ChatScreen, and improve PredefinedQuestions component with a title and icon for better user guidance

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -299,6 +299,7 @@
         "sources": "Used sources",
         "messagePlaceholder": "Ask a question",
         "predefinedQuestions": {
+            "title": "Try something like...",
             "summarizeLastChapter": "Summarize the last chapter read",
             "presentWork": "Introduce the work to me",
             "analyzeCurrentArc": "Analyze the current arc"
